--- a/src/main/resources/templates/editUser.html
+++ b/src/main/resources/templates/editUser.html
@@ -14,19 +14,13 @@
 <nav class="p-3">
     <nav class="container">
         <div class="card">
-            <form method="post" th:action="@{saveExposant}">
+            <form method="post" th:action="@{saveUser}">
                 <div class="card-body">
                     <div class="d-flex align-items-center justify-content-between">
 
                         <h4 class="card-title mt-3 text-center">
                             Editer exposant:
                         </h4>
-
-                        <a th:if="${#authorization.expression('hasRole(''ADMIN'')')}">
-                            <a href="/listExposants" class="btn btn-outline-primary ml-auto">
-                                <i class="fa fa-arrow-left" aria-hidden="true"></i> Liste des exposants
-                            </a>
-                        </a>
 
                         <a th:if="${#authorization.expression('hasRole(''USER'')')}">
                             <a href="/dashboard" class="btn btn-outline-primary ml-auto">
@@ -146,29 +140,15 @@
                         <span class="text-danger" th:errors="${exposant.specialite}"></span>
                     </div>
 
-                    <a th:if="${#authorization.expression('hasRole(''USER'')')}">
-                        <i>Localisation :</i>
-                        <div class="form-group input-group">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text">  <i class="fa fa-compass" aria-hidden="true"></i></span>
-                            </div>
-                            <input id="localisationn" class="form-control" type="text" name="localisationn"
-                                   th:value="${exposant.localisation}" placeholder="Indisponible" readonly>
-                            <span class="text-danger" th:errors="${exposant.localisation}"></span>
-                        </div>
-                    </a>
-
-                    <a th:if="${#authorization.expression('hasRole(''ADMIN'')')}">
                         <i>Localisation :</i>
                         <div class="form-group input-group">
                             <div class="input-group-prepend">
                                 <span class="input-group-text">  <i class="fa fa-compass" aria-hidden="true"></i></span>
                             </div>
                             <input id="localisation" class="form-control" type="text" name="localisation"
-                                   th:value="${exposant.localisation}" placeholder="Indisponible">
+                                   th:value="${exposant.localisation}" placeholder="Indisponible" readonly>
                             <span class="text-danger" th:errors="${exposant.localisation}"></span>
                         </div>
-                    </a>
 
 
                     <input id="id" class="form-control" type="hidden" name="exposantId"
@@ -184,17 +164,15 @@
                     <script>
                         // Enable the "Save" button when the "Titre" field has valid value
                         const usernameInput = document.querySelector('[name="nom"]');
-                        const localisationInput = document.querySelector('[name="localisation"]');
                         const saveButton = document.getElementById('saveButton');
 
                         // Check the input value initially and disable/enable the button accordingly
                         toggleSaveButtonState();
 
                         usernameInput.addEventListener('input', toggleSaveButtonState);
-                        localisationInput.addEventListener('input', toggleSaveButtonState);
 
                         function toggleSaveButtonState() {
-                            if (usernameInput.value.trim() !== "" && localisationInput.value.trim() !== "") {
+                            if (usernameInput.value.trim() !== "") {
                                 saveButton.removeAttribute('disabled');
                             } else {
                                 saveButton.setAttribute('disabled', 'disabled');
