--- a/src/main/resources/templates/exposantdetails.html
+++ b/src/main/resources/templates/exposantdetails.html
@@ -19,29 +19,42 @@
 
 
                 <h4 class="card-title mt-3 text-center">
-                        ExposantDetails :
+                        Details :
                     </h4>
 
-                <a href="/dashboard" class="btn btn-outline-primary ml-auto">
-                    <i class="fa fa-arrow-left" aria-hidden="true"></i> Dashboard
+                <a href="/listExposants" class="btn btn-outline-primary ml-auto">
+                    <i class="fa fa-arrow-left" aria-hidden="true"></i> Liste des exposants
                 </a>
         </div>
 
                         <span class="form-control" th:text="${user.userId}" hidden></span>
 
 
-                <i>Nom :</i>
+
+                <i>Nom d'utilisateur:</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-building"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-user" aria-hidden="true"></i> </span>
                     </div>
                     <span class="form-control" th:text="${user.username}"></span>
                 </div>
 
-                <i>mail :</i>
+                <i>Nom d'exposant :</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-building"></i>
+ </span>
+                    </div>
+                    <span class="form-control" th:if="${exposant.nom == null or exposant.nom == ''}"
+                          th:text="Indisponible"></span>
+                    <span class="form-control" th:if="${exposant.nom != null and exposant.nom != ''}"
+                          th:text="${exposant.nom}"></span>
+                </div>
+
+                <i>Mail :</i>
+                <div class="form-group input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text"> <i class="fa fa-address-card" aria-hidden="true"></i> </span>
                     </div>
                     <span class="form-control" th:if="${user.exposant.mail == null or user.exposant.mail == ''}" th:text="Indisponible"></span>
                     <span class="form-control" th:if="${user.exposant.mail != null and user.exposant.mail != ''}" th:text="${user.exposant.mail}"></span>
@@ -59,7 +72,7 @@
                 <i>Pays :</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-globe" aria-hidden="true"></i></span>
                     </div>
                     <span class="form-control" th:if="${user.exposant.pays == null or user.exposant.pays == ''}" th:text="Indisponible"></span>
                     <span class="form-control" th:if="${user.exposant.pays != null and user.exposant.pays != ''}" th:text="${user.exposant.pays}"></span>
@@ -69,7 +82,7 @@
                 <i>Telephone :</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-phone-square" aria-hidden="true"></i></span>
                     </div>
                     <span class="form-control" th:if="${user.exposant.telephone == null or user.exposant.telephone == ''}" th:text="Indisponible"></span>
                     <span class="form-control" th:if="${user.exposant.telephone != null and user.exposant.telephone != ''}" th:text="${user.exposant.telephone}"></span>
@@ -78,7 +91,7 @@
                 <i>Site Web :</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-desktop" aria-hidden="true"></i></span>
                     </div>
                     <span class="form-control" th:if="${user.exposant.siteWeb == null or user.exposant.siteWeb == ''}" th:text="Indisponible"></span>
                     <span class="form-control" th:if="${user.exposant.siteWeb != null and user.exposant.siteWeb != ''}" th:text="${user.exposant.siteWeb}"></span>
@@ -87,7 +100,7 @@
                 <i>Adresse :</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
+                        <span class="input-group-text">  <i class="fa fa-map-marker" aria-hidden="true"></i> </span>
                     </div>
                     <span class="form-control" th:if="${user.exposant.adresse == null or user.exposant.adresse == ''}" th:text="Indisponible"></span>
                     <span class="form-control" th:if="${user.exposant.adresse != null and user.exposant.adresse != ''}" th:text="${user.exposant.adresse}"></span>
@@ -96,7 +109,7 @@
                 <i>Responsable Salle:</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-user-plus" aria-hidden="true"></i> </span>
                     </div>
                     <span class="form-control" th:if="${user.exposant.responsableSalle == null or user.exposant.responsableSalle == ''}" th:text="Indisponible"></span>
                     <span class="form-control" th:if="${user.exposant.responsableSalle != null and user.exposant.responsableSalle != ''}" th:text="${user.exposant.responsableSalle}"></span>
@@ -106,16 +119,16 @@
                 <i>Responsable :</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-male" aria-hidden="true"></i> </span>
                     </div>
                     <span class="form-control" th:if="${user.exposant.responsable == null or user.exposant.responsable == ''}" th:text="Indisponible"></span>
                     <span class="form-control" th:if="${user.exposant.responsable != null and user.exposant.responsable != ''}" th:text="${user.exposant.responsable}"></span>
                 </div>
 
-                <i>Specialite :</i>
+                <i>Spécialité :</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-book" aria-hidden="true"></i></span>
                     </div>
                     <span class="form-control" th:if="${user.exposant.specialite == null or user.exposant.specialite == ''}" th:text="Indisponible"></span>
                     <span class="form-control" th:if="${user.exposant.specialite != null and user.exposant.specialite != ''}" th:text="${user.exposant.specialite}"></span>
@@ -125,7 +138,7 @@
                 <i>Localisation :</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-compass" aria-hidden="true"></i></span>
                     </div>
                     <span class="form-control" th:if="${user.exposant.localisation == null or user.exposant.localisation == ''}" th:text="Indisponible"></span>
                     <span class="form-control" th:if="${user.exposant.localisation != null and user.exposant.localisation != ''}" th:text="${user.exposant.localisation}"></span>
