--- a/src/main/resources/templates/exposantdetailss.html
+++ b/src/main/resources/templates/exposantdetailss.html
@@ -15,120 +15,152 @@
     <nav class="container">
         <div class="card">
             <div class="card-body">
-            <div class="d-flex align-items-center justify-content-between">
+                <div class="d-flex align-items-center justify-content-between">
 
 
-                <h4 class="card-title mt-3 text-center">
-                        ExposantDetails :
+                    <h4 class="card-title mt-3 text-center">
+                        Details :
                     </h4>
 
-                <a href="/listExposantss" class="btn btn-outline-primary ml-auto">
-                    <i class="fa fa-arrow-left" aria-hidden="true"></i> Liste des Exposants
-                </a>
-        </div>
-
-                        <span class="form-control" th:text="${user.userId}" hidden></span>
-
-
-                <i>Nom :</i>
-                <div class="form-group input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-building"></i> </span>
-                    </div>
-                    <span class="form-control" th:text="${user.username}"></span>
+                    <a href="/listExposantss" class="btn btn-outline-primary ml-auto">
+                        <i class="fa fa-arrow-left" aria-hidden="true"></i> Liste des Exposants
+                    </a>
                 </div>
 
-                <i>mail :</i>
+                <span class="form-control" th:text="${user.userId}" hidden></span>
+
+
+
+
+                <i>Nom d'exposant :</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-building"></i>
+ </span>
                     </div>
-                    <span class="form-control" th:if="${user.exposant.mail == null or user.exposant.mail == ''}" th:text="Indisponible"></span>
-                    <span class="form-control" th:if="${user.exposant.mail != null and user.exposant.mail != ''}" th:text="${user.exposant.mail}"></span>
+                    <span class="form-control" th:if="${exposant.nom == null or exposant.nom == ''}"
+                          th:text="Indisponible"></span>
+                    <span class="form-control" th:if="${exposant.nom != null and exposant.nom != ''}"
+                          th:text="${exposant.nom}"></span>
                 </div>
 
-                <i>E-mail :</i>
+                <i>Email :</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-address-card" aria-hidden="true"></i> </span>
                     </div>
-                    <span class="form-control" th:if="${user.email == null or user.email == ''}" th:text="Indisponible"></span>
-                    <span class="form-control" th:if="${user.email != null and user.email != ''}" th:text="${user.email}"></span>
+                    <span class="form-control" th:if="${user.exposant.mail == null or user.exposant.mail == ''}"
+                          th:text="Indisponible"></span>
+                    <span class="form-control" th:if="${user.exposant.mail != null and user.exposant.mail != ''}"
+                          th:text="${user.exposant.mail}"></span>
                 </div>
 
                 <i>Pays :</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-globe" aria-hidden="true"></i></span>
                     </div>
-                    <span class="form-control" th:if="${user.exposant.pays == null or user.exposant.pays == ''}" th:text="Indisponible"></span>
-                    <span class="form-control" th:if="${user.exposant.pays != null and user.exposant.pays != ''}" th:text="${user.exposant.pays}"></span>
+                    <span class="form-control" th:if="${user.exposant.pays == null or user.exposant.pays == ''}"
+                          th:text="Indisponible"></span>
+                    <span class="form-control" th:if="${user.exposant.pays != null and user.exposant.pays != ''}"
+                          th:text="${user.exposant.pays}"></span>
                 </div>
 
 
                 <i>Telephone :</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-phone-square" aria-hidden="true"></i>
+ </span>
                     </div>
-                    <span class="form-control" th:if="${user.exposant.telephone == null or user.exposant.telephone == ''}" th:text="Indisponible"></span>
-                    <span class="form-control" th:if="${user.exposant.telephone != null and user.exposant.telephone != ''}" th:text="${user.exposant.telephone}"></span>
+                    <span class="form-control"
+                          th:if="${user.exposant.telephone == null or user.exposant.telephone == ''}"
+                          th:text="Indisponible"></span>
+                    <span class="form-control"
+                          th:if="${user.exposant.telephone != null and user.exposant.telephone != ''}"
+                          th:text="${user.exposant.telephone}"></span>
                 </div>
 
                 <i>Site Web :</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-desktop" aria-hidden="true"></i>
+ </span>
                     </div>
-                    <span class="form-control" th:if="${user.exposant.siteWeb == null or user.exposant.siteWeb == ''}" th:text="Indisponible"></span>
-                    <span class="form-control" th:if="${user.exposant.siteWeb != null and user.exposant.siteWeb != ''}" th:text="${user.exposant.siteWeb}"></span>
+                    <span class="form-control" th:if="${user.exposant.siteWeb == null or user.exposant.siteWeb == ''}"
+                          th:text="Indisponible"></span>
+                    <span class="form-control" th:if="${user.exposant.siteWeb != null and user.exposant.siteWeb != ''}"
+                          th:text="${user.exposant.siteWeb}"></span>
                 </div>
 
                 <i>Adresse :</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-map-marker" aria-hidden="true"></i>
+ </span>
                     </div>
-                    <span class="form-control" th:if="${user.exposant.adresse == null or user.exposant.adresse == ''}" th:text="Indisponible"></span>
-                    <span class="form-control" th:if="${user.exposant.adresse != null and user.exposant.adresse != ''}" th:text="${user.exposant.adresse}"></span>
+                    <span class="form-control" th:if="${user.exposant.adresse == null or user.exposant.adresse == ''}"
+                          th:text="Indisponible"></span>
+                    <span class="form-control" th:if="${user.exposant.adresse != null and user.exposant.adresse != ''}"
+                          th:text="${user.exposant.adresse}"></span>
                 </div>
 
                 <i>Responsable Salle:</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-user-plus" aria-hidden="true"></i>
+ </span>
                     </div>
-                    <span class="form-control" th:if="${user.exposant.responsableSalle == null or user.exposant.responsableSalle == ''}" th:text="Indisponible"></span>
-                    <span class="form-control" th:if="${user.exposant.responsableSalle != null and user.exposant.responsableSalle != ''}" th:text="${user.exposant.responsableSalle}"></span>
+                    <span class="form-control"
+                          th:if="${user.exposant.responsableSalle == null or user.exposant.responsableSalle == ''}"
+                          th:text="Indisponible"></span>
+                    <span class="form-control"
+                          th:if="${user.exposant.responsableSalle != null and user.exposant.responsableSalle != ''}"
+                          th:text="${user.exposant.responsableSalle}"></span>
                 </div>
 
 
                 <i>Responsable :</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-male" aria-hidden="true"></i>
+ </span>
                     </div>
-                    <span class="form-control" th:if="${user.exposant.responsable == null or user.exposant.responsable == ''}" th:text="Indisponible"></span>
-                    <span class="form-control" th:if="${user.exposant.responsable != null and user.exposant.responsable != ''}" th:text="${user.exposant.responsable}"></span>
+                    <span class="form-control"
+                          th:if="${user.exposant.responsable == null or user.exposant.responsable == ''}"
+                          th:text="Indisponible"></span>
+                    <span class="form-control"
+                          th:if="${user.exposant.responsable != null and user.exposant.responsable != ''}"
+                          th:text="${user.exposant.responsable}"></span>
                 </div>
 
-                <i>Specialite :</i>
+                <i>Spécialité :</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-book" aria-hidden="true"></i>
+ </span>
                     </div>
-                    <span class="form-control" th:if="${user.exposant.specialite == null or user.exposant.specialite == ''}" th:text="Indisponible"></span>
-                    <span class="form-control" th:if="${user.exposant.specialite != null and user.exposant.specialite != ''}" th:text="${user.exposant.specialite}"></span>
+                    <span class="form-control"
+                          th:if="${user.exposant.specialite == null or user.exposant.specialite == ''}"
+                          th:text="Indisponible"></span>
+                    <span class="form-control"
+                          th:if="${user.exposant.specialite != null and user.exposant.specialite != ''}"
+                          th:text="${user.exposant.specialite}"></span>
                 </div>
 
 
                 <i>Localisation :</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-compass" aria-hidden="true"></i>
+ </span>
                     </div>
-                    <span class="form-control" th:if="${user.exposant.localisation == null or user.exposant.localisation == ''}" th:text="Indisponible"></span>
-                    <span class="form-control" th:if="${user.exposant.localisation != null and user.exposant.localisation != ''}" th:text="${user.exposant.localisation}"></span>
+                    <span class="form-control"
+                          th:if="${user.exposant.localisation == null or user.exposant.localisation == ''}"
+                          th:text="Indisponible"></span>
+                    <span class="form-control"
+                          th:if="${user.exposant.localisation != null and user.exposant.localisation != ''}"
+                          th:text="${user.exposant.localisation}"></span>
                 </div>
 
             </div>
