--- a/src/main/resources/templates/exposantsVisiteur.html
+++ b/src/main/resources/templates/exposantsVisiteur.html
@@ -40,21 +40,16 @@
                 <table class="table table-bordered">
                     <thead>
                     <tr>
-                        <th>ID</th>
-                        <th>Nom</th>
+                        <th>Nom d'exposant</th>
                         <th>Pays</th>
-                        <th>mail</th>
                         <th>Email</th>
-                        <th>Specialite</th>
+                        <th>Spécialité</th>
                         <th>Localisation</th>
                         <th style="text-align: center;">Action</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr th:each="exposant:${listExposantss}">
-                        <td th:text="${exposant.exposantId}"></td>
-
-
                         <td>
                             <span th:if="${exposant.nom} != null" th:text="${exposant.nom}"></span>
                             <span th:unless="${exposant.nom}">Indisponible</span>
@@ -67,10 +62,6 @@
                         <td>
                             <span th:if="${exposant.mail} != null" th:text="${exposant.mail}"></span>
                             <span th:unless="${exposant.mail}">Indisponible</span>
-                        </td>
-                        <td>
-                            <span th:if="${exposant.user.email} != null" th:text="${exposant.user.email}"></span>
-                            <span th:unless="${exposant.user.email}">Indisponible</span>
                         </td>
                         <td>
                             <span th:if="${exposant.specialite} != null" th:text="${exposant.specialite}"></span>
