--- a/src/main/resources/templates/livredetails.html
+++ b/src/main/resources/templates/livredetails.html
@@ -15,25 +15,18 @@
             <div class="card-body">
                 <div class="d-flex align-items-center justify-content-between">
                     <h4 class="card-title mt-3 text-center">
-                        LivreDetails :
+                        Details :
                     </h4>
                     <a th:href="@{/listLivres}" class="btn btn-outline-primary ml-auto">
                         <i class="fa fa-arrow-left" aria-hidden="true"></i> Liste des livres
                     </a>
                 </div>
 
-                <i>ID :</i>
-                <div class="form-group input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-building"></i> </span>
-                    </div>
-                    <span class="form-control" th:text="${livre.livreId}"></span>
-                </div>
-
                 <i>Titre :</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-building"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-book" aria-hidden="true"></i>
+ </span>
                     </div>
                     <span class="form-control" th:unless="${livre.titre}" th:text="Indisponible"></span>
                     <span class="form-control" th:if="${livre.titre}" th:text="${livre.titre}"></span>
@@ -42,7 +35,8 @@
                 <i>Auteur :</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-user" aria-hidden="true"></i>
+ </span>
                     </div>
                     <span class="form-control" th:if="${livre.auteur == null or livre.auteur == ''}" th:text="Indisponible"></span>
                     <span class="form-control" th:if="${livre.auteur != null and livre.auteur != ''}" th:text="${livre.auteur}"></span>
@@ -51,7 +45,8 @@
                 <i>Editeur :</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-university" aria-hidden="true"></i>
+ </span>
                     </div>
                     <span class="form-control" th:if="${livre.editeur == null or livre.editeur == ''}" th:text="Indisponible"></span>
                     <span class="form-control" th:if="${livre.editeur != null and livre.editeur != ''}" th:text="${livre.editeur}"></span>
@@ -60,7 +55,8 @@
                 <i>Date edition :</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-university" aria-hidden="true"></i>
+ </span>
                     </div>
                     <span class="form-control" th:if="${livre.dateEdition == null or livre.dateEdition == ''}" th:text="Indisponible"></span>
                     <span class="form-control" th:if="${livre.dateEdition != null and livre.dateEdition != ''}" th:text="${livre.dateEdition}"></span>
@@ -69,28 +65,22 @@
                 <i>Prix :</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
+                        <span class="input-group-text"> <i class="fa fa-credit-card" aria-hidden="true"></i>
+
+ </span>
                     </div>
                     <span class="form-control" th:if="${livre.prix == null or livre.prix == ''}" th:text="Indisponible"></span>
                     <span class="form-control" th:if="${livre.prix != null and livre.prix != ''}" th:text="${livre.prix}"></span>
                 </div>
 
-                <i>Isbn :</i>
-                <div class="form-group input-group">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text"> <i class="fa fa-address-book"></i> </span>
-                    </div>
-                    <span class="form-control" th:if="${livre.isbn == null or livre.isbn == ''}" th:text="Indisponible"></span>
-                    <span class="form-control" th:if="${livre.isbn != null and livre.isbn != ''}" th:text="${livre.isbn}"></span>
-                </div>
 
                 <i>Exposant :</i>
                 <div class="form-group input-group">
                     <div class="input-group-prepend">
                         <span class="input-group-text"> <i class="fa fa-street-view" aria-hidden="true"></i> </span>
                     </div>
-                    <span class="form-control" th:unless="${livre.exposant.user.username}" th:text="Indisponible"></span>
-                    <span class="form-control" th:if="${livre.exposant.user.username}" th:text="${livre.exposant.user.username}"></span>
+                    <span class="form-control" th:unless="${livre.exposant.nom}" th:text="Indisponible"></span>
+                    <span class="form-control" th:if="${livre.exposant.nom}" th:text="${livre.exposant.nom}" ></span>
                 </div>
 
             </div>
